Added few more example lightning components

--- a/geolocation2/main/default/aura/AccountLocator/AccountLocator.cmp
+++ b/geolocation2/main/default/aura/AccountLocator/AccountLocator.cmp
@@ -5,6 +5,8 @@
 <aura:component description="AccountLocator" implements="force:appHostable">
     <div>
         <div>AccountMap goes here</div>
-        <div>AccountList goes here</div>
+        <div>
+            <c:AccountList/>
+        </div>
     </div>
 </aura:component>
